# virtual_devices

./: .gitignore  LICENSE  README.md  README_CN.md  README_EN.md  hacs.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: hassfest.yaml  release.yml  validate.yaml
custom_components/virtual_devices/: LICENSE  __init__.py  air_purifier.py  alarm_control_panel.py  appliance.py  appliance_control.py  automation_scene.py  base_entity.py  base_service.py  binary_sensor.py  button.py  camera.py  climate.py  climate_control.py  config_flow.py  const.py  cover.py  en_formatted.json  entity_category.py  environment_monitor.py  fan.py  hacs.json  humidifier.py  laundry.py  lawn_mower.py  light.py  lighting_control.py  lock.py  manifest.json  media_player.py  number.py  remote.py  restart_integration.py  scene.py  schema_factory.py  security_access.py  select.py  sensor.py  simple_config_flow_test.py  simple_test.py  (+11 more)
custom_components/virtual_devices/.claude/: settings.local.json
custom_components/virtual_devices/translations/: en.json  zh-Hans.json  zh.json
tests/: test_device_registry.py
